--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
+        <a class="navbar-brand order-1 d-none d-lg-block" href="mailto:kendall.bendheim@gmail.com" target="_blank">&#9998;</a>
         <a class="navbar-brand" href="#">&#9738;</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Portfolio</a>
-            <a class="nav-link" href="#">Contact &#9998;</a>
+            <a class="nav-link about-link" href="#" title="moi!" text-decoration-none>about<span class="sr-only">(current)</span></a>
+            <a class="nav-link port-link" href="#" title="check it out!" text-decoration-none>portfolio</a>
+            <a class="nav-link contact-link" href="#" text-decoration-none>contact</a>
           </div>
         </div>
     </div>
@@ -50,13 +51,14 @@
 
     <!-- portfolio cards -->
 <div class="content-shell">
-    <h1 id="portfolio" class="display-4 text-center mb-5 pt-5 text-muted clearfix">Projects</h1>
+    <h1 id="portfolio" class="display-4 text-center mb-5 pt-5 text-muted clearfix">projects</h1>
     <div class="portfol-container container clearfix">
         <div class="row">
             <div class="col-lg-3">
                 <div class="card mb-3">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
+                     <h5 class="card-title">Before Consequence</h5>   
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
@@ -66,6 +68,7 @@
                 <div class="card mb-3">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
+                    <h5 class="card-title">Before Consequence</h5>   
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
@@ -75,6 +78,7 @@
                 <div class="card">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
+                    <h5 class="card-title">Before Consequence</h5>     
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
@@ -84,6 +88,7 @@
                 <div class="card mb-3">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
+                    <h5 class="card-title">Before Consequence</h5>    
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
@@ -93,6 +98,7 @@
                 <div class="card mb-3">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
+                    <h5 class="card-title">Before Consequence</h5>     
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
@@ -102,6 +108,7 @@
                 <div class="card mb-3">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
+                    <h5 class="card-title">Before Consequence</h5>     
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
@@ -111,6 +118,7 @@
                 <div class="card mb-3">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
+                    <h5 class="card-title">Before Consequence</h5>     
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
@@ -120,6 +128,7 @@
                 <div class="card mb-3">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
+                    <h5 class="card-title">Before Consequence</h5>     
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
@@ -141,6 +150,7 @@
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>   
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> 
+<script src="app.js"></script>  
 </body>
 </html>
