--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand order-1 d-none d-lg-block" href="mailto:kendall.bendheim@gmail.com" target="_blank">&#9998;</a>
         <a class="navbar-brand" href="#">&#9738;</a>
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link about-link" href="#" title="moi!" text-decoration-none>about<span class="sr-only">(current)</span></a>
-            <a class="nav-link port-link" href="#" title="check it out!" text-decoration-none>portfolio</a>
+            <a class="nav-link port-link" href="#portfolio" title="check it out!" text-decoration-none>portfolio</a>
             <a class="nav-link contact-link" href="#" text-decoration-none>contact</a>
           </div>
         </div>
@@ -43,110 +43,77 @@
         <!-- Icons made by <a href="https://smashicons.com/" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>-->
     <!-- header section end -->
 
-    <!-- about section start -->
-
-
-
-    <!-- about section end -->
 
     <!-- portfolio cards -->
 <div class="content-shell">
     <h1 id="portfolio" class="display-4 text-center mb-5 pt-5 text-muted clearfix">projects</h1>
     <div class="portfol-container container clearfix">
+
         <div class="row">
-            <div class="col-lg-3">
-                <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                     <h5 class="card-title">Before Consequence</h5>   
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+            <div class="col-6">
+              <div class="list-group" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action" id="list-kyle-list" data-toggle="list" href="#list-kyle" role="tab" aria-controls="kyle">kyle site</a>
+                <a class="list-group-item list-group-item-action" id="list-guess-list" data-toggle="list" href="#list-guess" role="tab" aria-controls="guess">guess the phrase</a>
+                <a class="list-group-item list-group-item-action" id="list-fotos-list" data-toggle="list" href="#list-fotos" role="tab" aria-controls="fotos">photo gallery</a>
+                <a class="list-group-item list-group-item-action" id="list-space-list" data-toggle="list" href="#list-space" role="tab" aria-controls="space">who's in space?</a>
+                <a class="list-group-item list-group-item-action" id="list-directory-list" data-toggle="list" href="#list-directory" role="tab" aria-controls="directory">employee directory</a>
+                <a class="list-group-item list-group-item-action" id="list-dash-list" data-toggle="list" href="#list-dash" role="tab" aria-controls="dash">web app dashboard</a>
+                <a class="list-group-item list-group-item-action" id="list-listicles-list" data-toggle="list" href="#list-listicles" role="tab" aria-controls="listicles">listicles</a>
+                <a class="list-group-item list-group-item-action" id="list-nat-list" data-toggle="list" href="#list-nat" role="tab" aria-controls="nat">nat's reel</a>
+              </div>
             </div>
+            <div class="col-6">
+              <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade" id="list-kyle" role="tabpanel" aria-labelledby="list-home-list">
+                    <p class="lean text-center">this simple page was designed for a close friend in order to showcase his current series
+                        of embroidery works that are on display in Tokyo.<br>
+                        <a href="#" target="_blank">check them out here</a>
+                    </p>
+                </div>
+                <div class="tab-pane fade" id="list-guess" role="tabpanel" aria-labelledby="list-profile-list">...</div>
+                <div class="tab-pane fade" id="list-fotos" role="tabpanel" aria-labelledby="list-messages-list">...</div>
+                <div class="tab-pane fade" id="list-space" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+                <div class="tab-pane fade" id="list-directory" role="tabpanel" aria-labelledby="list-home-list">...</div>
+                <div class="tab-pane fade" id="list-dash" role="tabpanel" aria-labelledby="list-profile-list">...</div>
+                <div class="tab-pane fade" id="list-listicles" role="tabpanel" aria-labelledby="list-messages-list">...</div>
+                <div class="tab-pane fade" id="list-nat" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+              </div>
+            </div>
+          </div>
 
-            <div class="col-lg-3">
-                <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Before Consequence</h5>   
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 mb-3">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Before Consequence</h5>     
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3">
-                <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Before Consequence</h5>    
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3">
-                <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Before Consequence</h5>     
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3">
-                <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Before Consequence</h5>     
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3">
-                <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Before Consequence</h5>     
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3">
-                <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Before Consequence</h5>     
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>   
     <!-- portfolio cards end -->
 
+        <!-- about section start -->
+<div class="container-fluid about-shell">
+            <h1 class="text-right mx-4">a brief summation</h1>
+        <div class="container pb-5 d-md-flex flex-md-row justify-content-md-around">
+                <img class="img-fluid col-md-5 myself" src="images/myself.jpeg" alt="myself">
+                <p class="lean col-md-5 bio">my name is kendall! and i care deeply about narrative, communication, and transparency. i'm from virginia but have been based in Barcelona since completing my MA here in 
+                    2019 in applied linguistics.
+                    i practice mobile-first, responsive design and am continuously learning, collecting skills and tools, and writing nonsense.
+                </p>
+        </div> 
+</div>         
+    
+        <!-- about section end -->
+
     <!-- contact/info section -->
-    <div class="container content-section">
-        <h3>fax me!</h3>
-        <p class="lead">or perhaps use another communication medium</p>
+<div class="container-fluid content-section text-center">
+        <h3 class="pt-5">get in touch!</h3>
+        <!-- <p class="lead"></p> -->
         <a href="mailto:kendall.bendheim@gmail.com">email me!</a><br>
         <a href="https://www.linkedin.com/in/kendall-bendheim-17bb55187/">or message me on linkedin.</a>
-    </div>
 
     <!-- contact/info section end -->
+
+    <!-- footer -->
+    <div class="col-md text-md-right">
+        <small>&copy; kendall b. 2020</small>
+      </div>
+</div> 
+<!-- ^ bottom container ends here -->
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
