Almost everything added

--- a/kyle-site/index.html
+++ b/kyle-site/index.html
@@ -51,7 +51,7 @@
 <div class="bio-contain container-fluid"> 
     <div id="bio" class="col-md-6 container">
         <p class="text-center container-fluid">
-        kyle mills is a writer, textile wizard, and occasional yodeler. kyle's art lives at the intersection of flotsam and jetsam
+        cowl is a writer, textile wizard, and occasional yodeler. kyle's art lives at the intersection of flotsam and jetsam
             and considers themes that unto themselves may only be expressed by individuals to whom the void speaks, such as the hamburglar.
         </p>
         </div> 
