--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="home" data-spy="scroll" data-target="#nav-bar" data-offset="100">
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="nav-bar">
     <div class="container-fluid">
         <a class="navbar-brand order-1 d-none d-lg-block" href="mailto:kendall.bendheim@gmail.com" target="_blank">&#9998;</a>
         <a class="navbar-brand" href="#">&#9738;</a>
@@ -18,9 +18,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link about-link" href="#about" title="moi!" text-decoration-none>about<span class="sr-only">(current)</span></a>
             <a class="nav-link port-link" href="#portfolio" title="check it out!" text-decoration-none>portfolio</a>
-            <a class="nav-link contact-link" href="#" text-decoration-none>contact</a>
+            <a class="nav-link about-link" href="#about" title="moi!" text-decoration-none>about<span class="sr-only">(current)</span></a>
+            <a class="nav-link contact-link" href="#contact" text-decoration-none>contact</a>
           </div>
         </div>
     </div>
@@ -36,7 +36,7 @@
                     <a href="#" class="highlighter text-decoration-none">kendall bendheim</a>
                 </h1>
                 <h3 class="text-center highlighter font-weight-normal mb-4">retired Magician, blossoming web designer</h3>
-                <p class="lead highlighter mt-4 ml-4 text-right">i'm fresh, clean, and a lean, mean front-end machine. shall we dance?</p>
+                <p class="lead highlighter mt-4 ml-4 text-right">based in Barcelona, bred in sweet Virginia</p>
             </div>
         </div>
 
@@ -46,33 +46,33 @@
 
     <!-- portfolio cards -->
 <div class="content-shell">
-    <h1 id="portfolio" class="display-4 text-center mb-5 pt-5 text-muted clearfix">projects</h1>
+    <h1 id="portfolio" class="display-4 text-center mb-5 pt-5 clearfix">projects</h1>
     <div class="portfol-container container clearfix">
 
         <div class="row">
             <div class="col-6">
               <div class="list-group" id="list-tab" role="tablist">
-                <a class="list-group-item list-group-item-action" id="list-kyle-list" data-toggle="list" href="#list-kyle" role="tab" aria-controls="kyle">kyle site</a>
+                <a class="list-group-item list-group-item-action" id="list-kyle-list" data-toggle="list" href="#list-kyle" role="tab" aria-controls="kyle">before consequence</a>
                 <a class="list-group-item list-group-item-action" id="list-guess-list" data-toggle="list" href="#list-guess" role="tab" aria-controls="guess">guess the phrase</a>
-                <a class="list-group-item list-group-item-action" id="list-fotos-list" data-toggle="list" href="#list-fotos" role="tab" aria-controls="fotos">photo gallery</a>
+                <a class="list-group-item list-group-item-action" id="list-fotos-list" data-toggle="list" href="#list-fotos" role="tab" aria-controls="fotos">searchable photo gallery</a>
                 <a class="list-group-item list-group-item-action" id="list-space-list" data-toggle="list" href="#list-space" role="tab" aria-controls="space">who's in space?</a>
                 <a class="list-group-item list-group-item-action" id="list-directory-list" data-toggle="list" href="#list-directory" role="tab" aria-controls="directory">employee directory</a>
                 <a class="list-group-item list-group-item-action" id="list-dash-list" data-toggle="list" href="#list-dash" role="tab" aria-controls="dash">web app dashboard</a>
                 <a class="list-group-item list-group-item-action" id="list-listicles-list" data-toggle="list" href="#list-listicles" role="tab" aria-controls="listicles">listicles</a>
-                <a class="list-group-item list-group-item-action" id="list-nat-list" data-toggle="list" href="#list-nat" role="tab" aria-controls="nat">nat's reel</a>
+                <a class="list-group-item list-group-item-action" id="list-madlib-list" data-toggle="list" href="#list-madlibs" role="tab" aria-controls="madlib">mad libs</a>
               </div>
             </div>
             <div class="col-6">
               <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade" id="list-kyle" role="tabpanel" aria-labelledby="list-kyle-list">
-                    <p class="lean text-center">this simple page was designed for a close friend in order to showcase his current series
-                        of embroidery works that are on display in Tokyo. i animated custom made SVG images that were traced using inkscape from an image of his needlework.<br>
+                    <p class="lean text-center">this responsive and simple page was designed for a close friend in order to showcase his current series
+                        of embroidery works. i animated custom made SVG images that were traced using inkscape from an image of his needlework.<br>
                         <a href="kyle-site/index.html" target="_blank">&#9758; check it out here</a>
                     </p>
                 </div>
                 <div class="tab-pane fade" id="list-guess" role="tabpanel" aria-labelledby="list-guess-list">
                   <p class="lean text-center">as a part of the techdegree i built javascript for this "guess the phrase" game. it includes an array of 5 different phrases
-                    the user may be required to guess for.
+                    the user may be required to guess for as well as functions to randomize the phrases and to keep score and end the game when lost or won.
                     <br>
                     <a href="Project-6-Techdegree/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
@@ -84,26 +84,37 @@
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-space" role="tabpanel" aria-labelledby="list-space-list">
-                  <p class="lean text-center">by using fetch 2 different APIs this webpage tells a visitor who exactly is in space at any given moment. 
+                  <p class="lean text-center">by using fetch and 2 other APIs, this webpage tells a visitor who exactly is in space at any given moment,
+                    along with a brief summary of the astronaut. 
                     javascript was used to create the dynamic layout and make the fetch requests.<br>
                     <a href="#" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-directory" role="tabpanel" aria-labelledby="list-directory-list">
                   <p class="lean text-center">by using the fetch API and the randomuser.me random people generator, this webpage displays a page
-                    of randomized employees in a fake company.<br>
+                    of randomized employees in a fake company and includes a filtering search function.<br>
                     <a href="#" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-dash" role="tabpanel" aria-labelledby="list-dash-list">
                   <p class="lean text-center">this is a responsive prototype of an employee dashboard. dynamic graphs were created
-                    with the chart library chartjs and javascript was added for an alert banner. the layout was created without any framework programming animatedw
+                    with the chart library chartjs and javascript was added for an alert banner. the layout was created without any frameworks and
                     was done with css flexgrid.<br>
                     <a href="#" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
-                <div class="tab-pane fade" id="list-listicles" role="tabpanel" aria-labelledby="list-listicles-list">...</div>
-                <div class="tab-pane fade" id="list-nat" role="tabpanel" aria-labelledby="list-nat-list">...</div>
+                <div class="tab-pane fade" id="list-listicles" role="tabpanel" aria-labelledby="list-listicles-list">
+                  <p class="lean text-center">one of my favorite hobbies is writing lists, and recently I've begun writing satirical lists a lá Dave Eggers' online
+                    magazine "McSweeney's". i've animated this page with css to show modal windows with these lists and intend to update it semi-regularly and improve the design.<br>
+                    <a href="listiclepage/index.html" target="_blank">&#9758; check it out here</a>
+                </p>
+                </div>
+                <div class="tab-pane fade" id="list-madlibs" role="tabpanel" aria-labelledby="list-madlib-list">
+                  <p class="lean text-center">this is a madlib i wrote and programmed with simple javascript. i intend to improve upon it by substituting the various input constants
+                    with a loop, adding an alert for empty input, and writing more madlibs with an option to choose one by theme or randomly on a landing page.<br>
+                    <a href="MAD-libz/index.html" target="_blank">&#9758; check it out here</a>
+                </p>
+                </div>
               </div>
             </div>
           </div>
@@ -117,9 +128,12 @@
             <h1 class="text-right mx-4">a brief history</h1>
         <div class="container pb-5 d-md-flex flex-md-row justify-content-md-around">
                 <img class="img-fluid col-md-5 myself" src="images/myself.jpeg" alt="myself">
-                <p class="lean col-md-5 bio">my name is kendall! and i care deeply about narrative, communication, and transparency. i'm from virginia but have been based in Barcelona since completing my MA here in 
-                    2019 in applied linguistics.
-                    i practice mobile-first, responsive design and am continuously learning, collecting skills and tools, and writing nonsense.
+                <p class="lean col-md-5 bio">
+                  hi! I’m kendall. I’m generally a word person, having worked as an editor, proofreader, 
+                  translator, and ghostwriter, and now am manifesting a career in web design from my love for 
+                  the internet. I care deeply about narrative and communication in all that I do, 
+                  and practice mobile-first, responsive design while continuously learning, collecting skills, 
+                  and hatching schemes for better web experiences.
                 </p>
         </div> 
 </div>         
@@ -127,16 +141,16 @@
         <!-- about section end -->
 
     <!-- contact/info section -->
-<div class="container-fluid content-section text-center">
+<div class="container-fluid content-section text-center" id="contact">
         <h3 class="pt-5">get in touch!</h3>
         <!-- <p class="lead"></p> -->
-        <a href="mailto:kendall.bendheim@gmail.com">email me!</a><br>
-        <a href="https://www.linkedin.com/in/kendall-bendheim-17bb55187/">or message me on linkedin.</a>
+        <a href="mailto:kendall.bendheim@gmail.com">email me</a><br>
+        <a href="https://www.linkedin.com/in/kendall-bendheim-17bb55187/">or message me on linkedin</a>
 
     <!-- contact/info section end -->
 
     <!-- footer -->
-    <div class="col-md text-md-right">
+    <div class="col-md text-md-right footer">
         <small>&copy; kendall b. 2020</small>
       </div>
 </div> 
