--- a/index.html
+++ b/index.html
@@ -74,33 +74,33 @@
                   <p class="lean text-center">as a part of the techdegree i built javascript for this "guess the phrase" game. it includes an array of 5 different phrases
                     the user may be required to guess for as well as functions to randomize the phrases and to keep score and end the game when lost or won.
                     <br>
-                    <a href="Project-6-Techdegree/index.html" target="_blank">&#9758; check it out here</a>
+                    <a href="guess-that-phrase/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-fotos" role="tabpanel" aria-labelledby="list-fotos-list">
                   <p class="lean text-center">this project was an excercise in jquery plugins and pure javascript. using a lightbox plugin
                     and javascript to create a filtering search bar, i built this photo gallery.<br>
-                    <a href="Project-5-Techdegree/index.html" target="_blank">&#9758; check it out here</a>
+                    <a href="lightbox-project/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-space" role="tabpanel" aria-labelledby="list-space-list">
                   <p class="lean text-center">by using fetch and 2 other APIs, this webpage tells a visitor who exactly is in space at any given moment,
                     along with a brief summary of the astronaut. 
                     javascript was used to create the dynamic layout and make the fetch requests.<br>
-                    <a href="#" target="_blank">&#9758; check it out here</a>
+                    <a href="whoisinspace/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-directory" role="tabpanel" aria-labelledby="list-directory-list">
                   <p class="lean text-center">by using the fetch API and the randomuser.me random people generator, this webpage displays a page
                     of randomized employees in a fake company and includes a filtering search function.<br>
-                    <a href="#" target="_blank">&#9758; check it out here</a>
+                    <a href="employee-directory/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-dash" role="tabpanel" aria-labelledby="list-dash-list">
                   <p class="lean text-center">this is a responsive prototype of an employee dashboard. dynamic graphs were created
                     with the chart library chartjs and javascript was added for an alert banner. the layout was created without any frameworks and
                     was done with css flexgrid.<br>
-                    <a href="#" target="_blank">&#9758; check it out here</a>
+                    <a href="dashboard/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-listicles" role="tabpanel" aria-labelledby="list-listicles-list">
