Added guess phrase app

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <p class="lean text-center">as a part of the techdegree i built javascript for this "guess the phrase" game. it includes an array of 5 different phrases
                     the user may be required to guess for as well as functions to randomize the phrases and to keep score and end the game when lost or won.
                     <br>
-                    <a href="Project-6-Techdegree/index.html" target="_blank">&#9758; check it out here</a>
+                    <a href="guess-le-phrase/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-fotos" role="tabpanel" aria-labelledby="list-fotos-list">
@@ -100,7 +100,7 @@
                   <p class="lean text-center">this is a responsive prototype of an employee dashboard. dynamic graphs were created
                     with the chart library chartjs and javascript was added for an alert banner. the layout was created without any frameworks and
                     was done with css flexgrid.<br>
-                    <a href="#" target="_blank">&#9758; check it out here</a>
+                    <a href="directory-project/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-listicles" role="tabpanel" aria-labelledby="list-listicles-list">
